# text-filter

./: .gitignore  CMakeLists.txt  README.md  _testdata.txt  pattern-10000.txt  testdata.txt
src/: CMakeLists.txt  main.cpp  string_filter.cpp  string_filter.hpp  test_filter.cpp  test_filter.hpp
src/algorithm/: CMakeLists.txt  aho_corasick.cpp  aho_corasick.hpp  algo_base.hpp  brute_force.cpp  brute_force.hpp  knuth_morris_pratt.cpp  knuth_morris_pratt.hpp
